--- a/dev/dev.csproj
+++ b/dev/dev.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="ReverseInteger.cs" />
+    <Content Include="MaxiumumSubarrayAverageII.cs" />
   </ItemGroup>
 </Project>
