--- a/test/test.csproj
+++ b/test/test.csproj
@@ -23,5 +23,6 @@
     <Content Include="TestCoinChangeProblem.cs" />
     <Content Include="TestDivisionGameProblem.cs" />
     <Content Include="TestMinCostClimbingStairs.cs" />
+    <Content Include="TestMaxLengthConcatenatedStringWithUniqueChars.cs" />
   </ItemGroup>
 </Project>
